--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             font-family: 'Cormorant Garamond', serif;
         }
         .hero-bg {
-            background-image: linear-gradient(rgba(29, 78, 216, 0.7), rgba(29, 78, 216, 0.7)), url('https://images.unsplash.com/photo-1549298916-b41d501d3772?q=80&w=2012&auto=format&fit=crop');
+            background-image: linear-gradient(rgba(29, 78, 216, 0.6), rgba(29, 78, 216, 0.6)), url('https://i.postimg.cc/fLcnXfwP/image.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed; /* Parallax effect */
@@ -302,6 +302,7 @@
 
 </body>
 </html>
+
 
 
 
