--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             background-attachment: fixed; /* Parallax effect */
         }
         .cta-bg {
-            background-image: linear-gradient(rgba(29, 78, 216, 0.85), rgba(29, 78, 216, 0.85)), url('https://images.unsplash.com/photo-1556906781-9a412961c28c?q=80&w=1887&auto=format&fit=crop');
+            background-image: linear-gradient(rgba(29, 78, 216, 0.85), rgba(29, 78, 216, 0.85)), url('https://i.postimg.cc/9FJ2JbG5/image.png');
             background-size: cover;
             background-position: center;
         }
@@ -302,9 +302,4 @@
 
 </body>
 </html>
-
-
-
-
-
 
